--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Cabinet Grotesk", sans-serif;
+  color: #eee7ef;
 }
 
 html,
