--- a/src/app.css
+++ b/src/app.css
@@ -2,11 +2,20 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Cabinet Grotesk", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   color: #eee7ef;
 }
 
 html,
 body {
   width: 100%;
+}
+
+h1,
+h2 {
+  font-family: "Mochiy Pop One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
