--- a/src/app.css
+++ b/src/app.css
@@ -19,3 +19,10 @@ h2 {
   font-weight: 400;
   font-style: normal;
 }
+
+h2 {
+  font-size: 0.9rem;
+  font-weight: 600;
+  margin-bottom: 6px;
+  width: 100%;
+}
