--- a/src/app.css
+++ b/src/app.css
@@ -14,15 +14,23 @@ body {
 }
 
 h1,
-h2 {
+h2,
+h3 {
   font-family: "Mochiy Pop One", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
 h2 {
-  font-size: 0.9rem;
+  font-size: 1.2rem;
   font-weight: 600;
+  margin-bottom: 6px;
+  width: 100%;
+}
+
+h3 {
+  font-size: 0.9rem;
+  font-weight: 400;
   margin-bottom: 6px;
   width: 100%;
 }
